Changelog
=========

1.0.5 - Unreleased
------------------


1.0.4 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]


1.0.3 - 2010-11-06
------------------

- Next/previous folder adapter should not return non-contentish objects,
  such as local workflow policies as example.
  This fixes http://dev.plone.org/plone/ticket/11234.
  [thomasdesvenain]


1.0.2 - 2010-08-08
------------------

- Adjust tests to work with Zope 2.13 and avoid deprecation warnings.
  [hannosch]

- Show the next **viewable** item in next/previous
  viewlet/link, as the behaviour was in Plone 3.
  This fixes http://dev.plone.org/plone/ticket/10309.
  [mr_savage]


1.0.1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]


1.0 - 2010-07-07
----------------

- Moved migration logic into the BTreeMigrationView to allow subclasses to
  override part of the logic.
  [hannosch]

- Remove the overly noisy migration report per folder.
  [hannosch]


1.0b7 - 2010-06-03
------------------

- Updated tests to not rely on the existence of the Large Plone Folder type,
  which was removed for Plone 4.
  [davisagli]


1.0b6 - 2010-05-02
------------------

- Nogopip vs. Acquisition take two - not all folders have a getOrdering
  method, so we need to avoid acquiring it.
  [hannosch]


1.0b5 - 2010-04-06
------------------

- Match ``getObjectPositionInParent`` behavior and handle unordered folders
  inside ordered folders shown in the navigation tree at the same time.
  [hannosch]


1.0b4 - 2010-03-06
------------------

- Don't try to store an acquisition-wrapped catalog on the positional index.
  [hannosch]


1.0b3 - 2010-02-18
------------------

- Only apply monkey patch for `reindexOnReorder` on Plone 3.x & shortcut
  indexing completely if the fake index has been installed.
  [witsch]

- Replace monkey patch for `Catalog._getSortIndex` with a fake index that