@@ -2,15 +2,21 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="plone.app.folder">
 
     <five:registerPackage package="." initialize=".initialize" />
-    <five:deprecatedManageAddDelete class=".folder.ATFolder" />
-
     <include file="profiles.zcml" />
     <include package="plone.folder" />
 
-    <adapter factory=".nextprevious.NextPrevious" />
+    <configure zcml:condition="installed Products.ATContentTypes">
+    
+      <five:deprecatedManageAddDelete
+        class=".folder.ATFolder" />
+
+      <adapter factory=".nextprevious.NextPrevious" />
+    
+    </configure>
 
     <browser:page
         for="*"
