@@ -4,6 +4,8 @@ Changelog
 1.0.5 - Unreleased
 ------------------
 
+- Only set up the folder content type if Archetypes is present.
+  [davisagli]
 
 1.0.4 - 2011-01-03
 ------------------
